# slack-mcp

./: .env.example  Cargo.toml
src/: main.rs  slack_client.rs  tools.rs  types.rs
