[package]
name = "slack-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server providing Slack integration tools"

[[bin]]
name = "slack-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
